hw2/service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw2-deployment
  namespace: otus-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      labels:
        app: crud-app
    spec:
      containers:
        - name: app
          image: eduardromanyuk/otus-hwt:v2
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 3
