hw2/service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw2-service
  namespace: otus-lab
spec:
  selector:
    app: crud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
